Fixed scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -154,10 +154,12 @@ html, body {
 /* CONTENT */
 
 .content {
-  margin: 6vh;
+  padding: 6vh;
   font-family: 'Changa', sans-serif;
   color: var(--light);
   z-index: 2;
+  height: 100vh;
+  overflow-y: auto;
 }
 
 .content-title {
